<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvEnd_marginTop"
        android:text="@string/end"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/tvEnd_text_size"/>

    <LinearLayout
        android:layout_width="@dimen/finish_screen_circle_button_size"
        android:layout_height="@dimen/finish_screen_circle_button_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/finish_screen_circle_button_marginTop"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center">
        
        <ImageView
            android:layout_width="@dimen/finish_screen_done_image_size"
            android:layout_height="@dimen/finish_screen_done_image_size"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_action_done_color_accent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/finish_screen_congrats_text_marginTop"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/finish_screen_congrats_text_size"
        android:text="@string/congratulations"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_text"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/finish_screen_congrats_text_size"/>
    
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/finish_screen_finish_button_marginTop"
        android:background="@color/colorAccent"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="@dimen/finish_screen_finish_button_text_size"/>


</LinearLayout>