<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/mImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        android:contentDescription="@string/image"
        android:src="@drawable/image_main_page"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mImage_view_height"
        />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_marginTop="@dimen/start_button_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/flStart_size"
        android:layout_height="@dimen/flStart_size"
        android:background="@drawable/item_color_accent_border_ripple_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/start_button_text_size"
            android:textStyle="bold"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_marginTop="@dimen/start_button_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/flBMI_size"
        android:layout_height="@dimen/flBMI_size"
        android:background="@drawable/item_circular_color_accent_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/start_button_text_size"
            android:textStyle="bold"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bmi_calculator_marginTop"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/bmi_calculator_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flBMI"/>


</androidx.constraintlayout.widget.ConstraintLayout>