<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/toolbar_bmi_activity"
        android:id="@+id/tilMetricUnitWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_weight_and_height_margin"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/ThemeOverlay.Material3.TextInputEditText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_metric_unit_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="@dimen/et_weight_and_height_text_size"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/tilMetricUnitWeight"
        android:id="@+id/tilMetricUnitHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_weight_and_height_margin"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/ThemeOverlay.Material3.TextInputEditText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_metric_unit_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="@dimen/et_weight_and_height_text_size"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_below="@id/tilMetricUnitHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/BMI_result_content_padding"
        android:layout_marginTop="@dimen/BMI_result_content_marginTop"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="@dimen/BMI_result_text_size"/>

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/BMI_result_texts_marginTop"
            android:gravity="center"
            android:textSize="@dimen/BMI_result_value_text_size"
            android:textStyle="bold"
            tools:text="15.00"/>

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/BMI_result_texts_marginTop"
            android:gravity="center"
            android:textSize="@dimen/BMI_result_value_text_size"
            tools:text="Normal"/>

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/BMI_result_texts_marginTop"
            android:gravity="center"
            android:textSize="@dimen/BMI_result_value_text_size"
            tools:text="Normal"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateUnits"
        android:layout_below="@id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calculate_btn_margin"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/calculate_btn_marginTop"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="@dimen/calculate_btn_text_size"/>




</RelativeLayout>